[gd_scene load_steps=4 format=3 uid="uid://cxtaq1i3u3wnm"]

[ext_resource type="Texture2D" uid="uid://4ocrwmv1xsa0" path="res://assest/beams.png" id="1_i04uj"]
[ext_resource type="Script" uid="uid://cp6qfw58tqds2" path="res://scenes/bullet.gd" id="1_ui5kq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhv0p"]
size = Vector2(52.5, 20)

[node name="Bullet" type="Area2D"]
position = Vector2(74, 49)
scale = Vector2(0.4, 0.4)
collision_layer = 4
collision_mask = 9
script = ExtResource("1_ui5kq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.25001, 4.76837e-07)
shape = SubResource("RectangleShape2D_fhv0p")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.39202, -9.03279e-06)
rotation = 1.5708
scale = Vector2(0.622805, 0.7448)
texture = ExtResource("1_i04uj")
region_enabled = true
region_rect = Rect2(219, 316, 32, 75)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
z_index = 2
position = Vector2(-7.5, 0)
emitting = false
amount = 4
lifetime = 0.6
one_shot = true
explosiveness = 1.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 400.0
scale_amount_min = 5.0
scale_amount_max = 5.0
color = Color(0.427451, 0.635294, 0, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="CPUParticles2D" to="." method="_on_cpu_particles_2d_finished"]
